--- a/blog/blog.css
+++ b/blog/blog.css
@@ -147,7 +147,7 @@ a{
 @font-face {
     /* font-family: "enfont"; */
     font-family: enfont;
-    src: url('./fonts/en/TradeGothicLTStd-BdCn20.woff');
+    src: url('../fonts/en/TradeGothicLTStd-BdCn20.woff');
     /* src: url('../public/fonts/en/TradeGothicLTStd-BdCn20.woff'); */
 }
 
@@ -155,7 +155,7 @@ a{
 @font-face {
     /* font-family: "enfont"; */
     font-family: senfont;
-    src: url('./fonts/en/TradeGothicLTStd-Cn18.woff');
+    src: url('../fonts/en/TradeGothicLTStd-Cn18.woff');
 }
 
 
