--- a/home.css
+++ b/home.css
@@ -18,7 +18,7 @@ footer {
     width: 15vh;
     border-radius: 50%;
     /* background: green; */
-    background: url('./public-imgs/makeitgreen-logo.jpg');
+    background: url('./imgs/makeitgreen-logo.jpg');
     background-size: contain;
 }
 
